update json
